<resources>
    <string name="app_name">android-starterkit</string>

    <string name="facebook_app_id" translatable="false">106034073373462</string>
    <string name="fb_login_protocol_scheme">fb106034073373462</string>

    <!--Android manifest label-->
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="profile">Profile</string>
    <string name="verification">Verification</string>
    <string name="home">Home</string>
    <string name="search">Search</string>

    <!--Navigation Drawer-->
    <string name="nav_home">Home</string>
    <string name="nav_bottom_navigation">Bottom Navigation</string>
    <string name="nav_other">Other</string>
    <string name="nav_help">Help</string>
    <string name="nav_about">About</string>
    <string name="nav_tos">Term of Service</string>
    <string name="nav_toa">Term of Agreement</string>
    <string name="nav_logout">Logout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Alert dialog-->
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="failed">Failed</string>
    <string name="no_response_server">No response from server.\nPlease try again later.</string>
    <string name="process_login">Logging in your account. Please wait&#8230;</string>
    <string name="process_register">Registering your account. Please wait&#8230;</string>
    <string name="process_forgot_password">Resetting your password. Please wait&#8230;</string>

    <!--login string-->
    <string name="login_button_login">Login</string>
    <string name="login_register">Register</string>
    <string name="login_forgot_password">Forgot Password?</string>
    <string name="login_or_login_with">or login with</string>
    <string name="login_hint_email">Email</string>
    <string name="login_hint_password">Password</string>
    <string name="login_with_google">Login with Google</string>
    <string name="login_with_facebook">Login with Facebook</string>

    <!--register string-->
    <string name="register_button_register">Register</string>
    <string name="register_terms_privacy_policy">By signing up, you are agree to our terms and Privacy Policy</string>
    <string name="register_or_register_with">or register with</string>
    <string name="register_hint_email">Email</string>
    <string name="register_hint_password">Password</string>
    <string name="register_hint_confirm_password">Confirm Password</string>
    <string name="register_first_name">First name</string>
    <string name="register_last_name">Last name</string>

    <!--string forgot password-->
    <string name="forgot_password_title">Forgot Password?</string>
    <string name="forgot_password_description">Enter your email and we will send instructions to reset your password</string>
    <string name="forgot_password_submit">Submit</string>
    <string name="forgot_password_have_code">I have a code</string>

    <!--validating form-->
    <string name="empty_editor">This editor can\'t be empty</string>
    <string name="email_invalid">Your email format is invalid</string>
    <string name="missmatch_password">Your confirmation password not match</string>
    <string name="minimum_password_required">Minimum password length is 5</string>

    <!--verification-->
    <string name="verification_hint_code">Code</string>
    <string name="verification_description">Please kindly open your email to get the verification code</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="permission_rationale_camera">This feature need permission to use camera</string>
    <string name="permission_rationale_phone_state">This feature need permission to access your phone state</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>


    <!--Firebase Analytics-->
    <string name="analytics_login_facebook">login_facebook</string>
    <string name="analytics_login_google">login_google</string>
    <string name="analytics_register">register</string>

    <!--Dummy Dataa-->
    <string-array name="dessert_names">
        <item>Cupcake</item>
        <item>Donut</item>
        <item>Eclair</item>
        <item>Froyo</item>
        <item>Gingerbread</item>
        <item>Honeycomb</item>
        <item>Ice-cream Sandwich</item>
        <item>Jelly Bean</item>
        <item>Kitkat</item>
        <item>Lollipop</item>
        <item>Marshmallow</item>
        <item>Nougat</item>
        <item>Oreo</item>
    </string-array>

    <string-array name="dessert_descriptions">
        <item>A small cake designed to serve one person, which may be baked in a small thin paper or aluminum cup. As with larger cakes, icing and other cake decorations, such as candy, may be applied.</item>
        <item>A type of fried dough confectionery or dessert food.</item>
        <item>An oblong pastry made with choux dough filled with a cream and topped with icing.</item>
        <item>Frozen yogurt is a frozen dessert made with yogurt and sometimes other dairy products. It is usually more tart than ice cream, as well as being lower in fat. It is different from ice milk and conventional soft serve.</item>
        <item>Refers to a broad category of baked goods, typically flavored with ginger, cloves, nutmeg or cinnamon and sweetened with honey, sugar or molasses.</item>
        <item>A mass of hexagonal wax cells built by honey bees in their nests to contain their larvae and stores of honey and pollen. Beekeepers may remove the entire honeycomb to harvest honey.</item>
        <item>A frozen dessert consisting of ice cream between two wafers, cookies, or other similar biscuit.</item>
        <item>Small bean-shaped sugar candies with soft candy shells and thick gel interiors. The confection comes in a wide variety of colors and flavors.</item>
        <item>A chocolate-covered wafer bar confection created by Rowntree of York, England, and is now produced globally by Nestle.</item>
        <item>A type of confectionery consisting of a sweetmeat of hard candy or water-ice mounted on a stick and intended for sucking or licking. Different informal terms are used in different places, including lolly, sucker, sticky-pop, etc.</item>
        <item>A sugar-based confection that, in its modern form, typically consists of sugar, water and gelatin which is whipped to a spongy consistency, molded into small cylindrical pieces, and coated with corn starch.</item>
        <item>A family of confections made with sugar or honey, roasted nuts, whipped egg whites, and sometimes chopped candied fruit. The consistency of nougat is chewy, and it is used in a variety of candy bars and chocolates.</item>
        <item>A commercial brand of cookie consisting of two chocolate wafers with a sweet creme filling in between, and (as of 1974) are marketed as "Chocolate Sandwich Cookies" on the package. The version currently sold in the United States is made by the Nabisco division of Mondelēz International.</item>
    </string-array>
</resources>
