<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_padding"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/activity_padding"
                android:paddingRight="@dimen/activity_padding">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/medium_padding"
                    android:gravity="center_horizontal"
                    android:text="@string/forgot_password_description"
                    android:textAppearance="?android:textAppearanceMedium" />


                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_email"
                    style="@style/EditText.Drawable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:drawableLeft="@drawable/ic_mail"
                    android:drawablePadding="@dimen/medium_padding"
                    android:hint="@string/login_hint_email"
                    android:inputType="textEmailAddress" />

                <Button
                    android:id="@+id/btn_submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:height="@dimen/action_button_min_height_material"
                    android:background="@drawable/selectable_button_green"
                    android:text="@string/forgot_password_submit"
                    android:textColor="@color/white" />


            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>